--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
             python3 manage.py test
         - name: Build and push the image
           run: |
-            docker login --username snehamanohar23 --password ${{secrets.ROOT_ACCESS_3}} ghcr.io
-            docker build -t ghcr.io/snehamanohar23/ciphers-service:latest --file Dockerfile .
-            docker push ghcr.io/snehamanohar23/ciphers-service:latest
+            docker login --username arav28 --password ${{secrets.ROOT_ACCESS_3}} ghcr.io
+            docker build -t ghcr.io/arav28/cipher-service:latest --file Dockerfile .
+            docker push ghcr.io/arav28/cipher-service:latest
 
 
